--- a/front/job-search/public/index.html
+++ b/front/job-search/public/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
     />
 
+    <script
+      src="https://kit.fontawesome.com/84f284d1dd.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
